# Web/NC.Web/NC.Web.Client/openapi.json
@@ -250,6 +250,44 @@
         }
       }
     },
+    "/api/Cache/Statistics": {
+      "get": {
+        "tags": [
+          "Cache"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/CacheEntryStatistics"
+                  }
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/CacheEntryStatistics"
+                  }
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/CacheEntryStatistics"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/Parameter/GetTranslations": {
       "get": {
         "tags": [
@@ -384,6 +422,35 @@
       },
       "ActivationResponse": {
         "type": "object"
+      },
+      "CacheEntryStatistics": {
+        "required": [
+          "key"
+        ],
+        "type": "object",
+        "properties": {
+          "key": {
+            "type": "string"
+          },
+          "isSliding": {
+            "type": "boolean"
+          },
+          "approximateSizeBytes": {
+            "pattern": "^-?(?:0|[1-9]\\d*)$",
+            "type": [
+              "integer",
+              "string"
+            ],
+            "format": "int64"
+          },
+          "expiration": {
+            "type": [
+              "null",
+              "string"
+            ],
+            "format": "date-time"
+          }
+        }
       },
       "KeyValuePairOfstringAndstring": {
         "required": [
